[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytitiler"
version = "0.1.0"
description = "Python client for titiler-pgstac"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pytitiler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests (no external services)",
    "integration: integration tests (requires running titiler-pgstac)",
]
