[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytitiler"
version = "0.1.0"
description = "Python client for titiler-pgstac"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.hatch.build.targets.wheel]
packages = ["pytitiler"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line length — handled by ruff format
]

[tool.ruff.lint.isort]
known-first-party = ["pytitiler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests (no external services)",
    "integration: integration tests (requires running titiler-pgstac)",
]
